--- a/css/layout/fonts.css
+++ b/css/layout/fonts.css
@@ -3,8 +3,15 @@
 ****************************/
 
 @font-face {
-    font-family: 'TitilliumWeb';
-    src: url('fonts/TitilliumWeb-Regular.ttf');
+    font-family: 'Roboto Regular';
+    src: url('fonts/Roboto-Regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto Bold';
+    src: url('fonts/Roboto-Bold.ttf');
     font-weight: normal;
     font-style: normal;
 }
