--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -176,23 +176,26 @@ ul {
 /* --------------- /reset.css --------------- */
 
 /* --------------- базовые настройки ---------*/
-
+a {
+text-transform: uppercase;
+}
 a,
 a:visited {
     /* порядок правил для ссылок имеет значение */
-    color: #f70f0f;
-    text-decoration: underline;
+    color: #000000;
+    text-decoration: none;
 }
 
 a:hover {
-    color: #fd8b08;
+    color: #fb565a;
     text-decoration: none;
 }
 
 a:focus,
 a:active {
-    color: #03fa03;
-    text-decoration: underline;
+    color: #000000;
+    opacity: 0.3;
+    text-decoration: none;
 }
 
 img {
