--- a/css/layout/structure/header.css
+++ b/css/layout/structure/header.css
@@ -7,3 +7,16 @@
     align-items: flex-end;
     justify-content: center;
 }
+
+.header-container {
+    display: flex;
+    justify-content: center;
+}
+
+.header-logo {
+    margin-right: auto;
+}
+
+.basket {
+    margin-left: auto;
+}
