--- a/css/layout/structure/header.css
+++ b/css/layout/structure/header.css
@@ -6,11 +6,13 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    background-color: #eeeeee;
 }
 
 .header-container {
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .header-logo {
