add bascket block & style fot him

--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,5 @@
 @import url('../css/layout/structure/footer.css');
 @import url('../css/layout/structure/maincontent.css');
 @import url('../css/blocks/header/navigation.css');
+@import url('../css/blocks/header/basket.css');
+
