--- a/css/layout/structure/structure.css
+++ b/css/layout/structure/structure.css
@@ -15,7 +15,7 @@
 .container {
     width: 1160px;
     margin: 0 auto;
-    border: 1px solid #cccccc;
+    /* border: 1px solid #cccccc; */
 }
 
 .wrapper__content {
