add slide block

--- a/css/main.css
+++ b/css/main.css
@@ -11,4 +11,5 @@
 @import url('../css/layout/structure/maincontent.css');
 @import url('../css/blocks/header/navigation.css');
 @import url('../css/blocks/header/basket.css');
+@import url('../css/blocks/header/slide.css');
 
