--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -176,9 +176,11 @@ ul {
 /* --------------- /reset.css --------------- */
 
 /* --------------- базовые настройки ---------*/
+
 a {
-text-transform: uppercase;
+    text-transform: uppercase;
 }
+
 a,
 a:visited {
     /* порядок правил для ссылок имеет значение */
@@ -186,12 +188,12 @@ a:visited {
     text-decoration: none;
 }
 
+a:focus,
 a:hover {
     color: #fb565a;
     text-decoration: none;
 }
 
-a:focus,
 a:active {
     color: #000000;
     opacity: 0.3;
@@ -211,6 +213,17 @@ img {
     clear: both;
     content: "";
     display: table;
+}
+
+button {
+    height: 50px;
+    color: #ffffff;
+    text-transform: uppercase;
+    border: none;
+    background-color: transparent;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 /* --------------- /базовые настройки ---------*/
