--- a/css/layout/structure/footer.css
+++ b/css/layout/structure/footer.css
@@ -4,6 +4,12 @@
 
 .footer {
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+}
+
+.container--footer-map {
+    padding-top: 50px;
+    display: flex;
 }
