--- a/css/layout/structure/header.css
+++ b/css/layout/structure/header.css
@@ -3,6 +3,7 @@
 ****************************/
 
 .header {
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
