add map-marker block & style for him

--- a/css/main.css
+++ b/css/main.css
@@ -15,3 +15,5 @@
 @import url('../css/blocks/header/slogan.css');
 @import url('../css/blocks/footer/map.css');
 @import url('../css/blocks/footer/address.css');
+@import url('../css/blocks/footer/map-marker.css');
+
