--- a/css/layout/structure/footer.css
+++ b/css/layout/structure/footer.css
@@ -13,3 +13,9 @@
     padding-top: 50px;
     display: flex;
 }
+
+.container--bottom {
+    padding-top: 40px;
+    display: flex;
+    align-items: center;
+}
