--- a/css/main.css
+++ b/css/main.css
@@ -16,4 +16,4 @@
 @import url('../css/blocks/footer/map.css');
 @import url('../css/blocks/footer/address.css');
 @import url('../css/blocks/footer/map-marker.css');
-
+@import url('../css/blocks/footer/social.css');
