add friend-request block & style for him

--- a/css/main.css
+++ b/css/main.css
@@ -17,3 +17,6 @@
 @import url('../css/blocks/footer/address.css');
 @import url('../css/blocks/footer/map-marker.css');
 @import url('../css/blocks/footer/social.css');
+@import url('../css/blocks/footer/friend-request.css');
+
+
