--- a/css/main.css
+++ b/css/main.css
@@ -18,5 +18,5 @@
 @import url('../css/blocks/footer/map-marker.css');
 @import url('../css/blocks/footer/social.css');
 @import url('../css/blocks/footer/friend-request.css');
-
+@import url('../css/blocks/index/structure.css');
 
