add titles in block main

--- a/css/main.css
+++ b/css/main.css
@@ -19,4 +19,4 @@
 @import url('../css/blocks/footer/social.css');
 @import url('../css/blocks/footer/friend-request.css');
 @import url('../css/blocks/index/structure.css');
-
+@import url('../css/blocks/index/offer.css');
