--- a/css/blocks/index/offer.css
+++ b/css/blocks/index/offer.css
@@ -3,5 +3,82 @@
 ****************************/
 
 .offer {
-    
+    padding-top: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* border: 1px solid #000000; */
+}
+
+.sites,
+.applications,
+.presentations {
+    width: 28%;
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid #000000; */
+}
+
+.sites__title,
+.applications__title,
+.presentations__title {
+    margin-top: 20px;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.sites__text,
+.applications__text,
+.presentations__text {
+    width: 90%;
+    margin-top: 20px;
+}
+
+.sites__button,
+.applications__button,
+.presentations__button {
+    margin-top: 20px;
+    width: 160px;
+}
+
+.sites__button {
+    background-color: #fb565a;
+}
+
+.sites__button:hover,
+.sites__button:focus {
+    background-color: #e74246;
+}
+
+.sites__button:active {
+    box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+    background-color: #d7373b;
+}
+
+.applications__button {
+    background-color: #00ca74;
+}
+
+.applications__button:hover,
+.applications__button:focus {
+    background-color: #00bc6c;
+}
+
+.applications__button:active {
+    box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+    background-color: #00aa62;
+}
+
+.presentations__button {
+    background-color: #efc84a;
+}
+
+.presentations__button:hover,
+.presentations__button:focus {
+    background-color: #eab534;
+}
+
+.presentations__button:active {
+    box-shadow: inset 0 3px 0 rgba(0, 1, 1, 0.1);
+    background-color: #e5a722;
 }
