--- a/css/blocks/index/structure.css
+++ b/css/blocks/index/structure.css
@@ -6,18 +6,6 @@
 .about,
 .clients {
     padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.offer::after,
-.about::after,
-.clients::after {
-    content: "";
-    margin-top: 30px;
-    display: inline-block;
-    width: 1160px;
-    height: 2px;
-    background-image: url('../../../img/decor/divide_copy_2.png');
-    background-position: center center;
-    background-repeat: no-repeat;
+    padding-bottom: 50px;
+    border-bottom: 2px solid #cccccc;
 }
