add style for creative block

--- a/css/main.css
+++ b/css/main.css
@@ -20,3 +20,4 @@
 @import url('../css/blocks/footer/friend-request.css');
 @import url('../css/blocks/index/structure.css');
 @import url('../css/blocks/index/offer.css');
+@import url('../css/blocks/index/creative.css');
