add style for numbers block

--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,4 @@
 @import url('../css/blocks/index/structure.css');
 @import url('../css/blocks/index/offer.css');
 @import url('../css/blocks/index/creative.css');
+@import url('../css/blocks/index/numbers.css');
