add style for clirnts block

--- a/css/main.css
+++ b/css/main.css
@@ -22,3 +22,4 @@
 @import url('../css/blocks/index/offer.css');
 @import url('../css/blocks/index/creative.css');
 @import url('../css/blocks/index/numbers.css');
+@import url('../css/blocks/index/clients.css');
